--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colloque MMI</title>
-    <link rel="stylesheet" href="HUB/css/reset.css">
-    <link rel="stylesheet" href="HUB/css/hub.css">
+    <title>Erwan Guillemart Portefolio</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
-    <script src="HUB/JS/base.js" defer></script>
+    <script src="js/style.js" defer></script>
 </head>
 <body>
 
