--- a/pages/Projet-1-courtmetrage.html
+++ b/pages/Projet-1-courtmetrage.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="images/Logo.jpg" type="image/x-icon">
-    <title>Erwan Guillemart Portefolio</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="../images/Logo.jpg" type="image/x-icon">
+    <title>Court métrage "comédie de noël"</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   
   <body class="demo custom-loading-spinner">
     <nav class="navbar Navbarcolor fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand Navbarcolor" href="#">Erwan Guillemart</a>
+          <a class="navbar-brand Navbarcolor" href="../index.html">Erwan Guillemart</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,7 +32,7 @@
                     Court métrage "Comédie Romantique de Noel"
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="pages/Projet-1-courtmetrage.html">Explication</a></li>
+                    <li><a class="dropdown-item" href="#">Explication</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
@@ -45,15 +45,13 @@
         </div>
       </nav>
     <h1>Salut toi.</h1>
+<div >
+    <h1 class="text-center">Projet de cours : Court métrage "comédie romantique de noël"</h1>
+<br>
+<br>
 
-    <h1 class="text-center">Bienvenue sur mon Portefolio</h1>
-
-    <h3 class="text-center">Pour voir tout mes projets clique sur le menu en haut à gauche de la page</h3>
-
-
-      
-
-
+    <h4 class="text-center">Pour voir tout mes projets clique sur le menu en haut à gauche de la page</h4>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
