--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
                     <li><a class="dropdown-item" href="https://youtu.be/g5A-oVIEHZA"target="_blank">Voir le film</a></li>
                   </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Hackaton Reboot 2022 "Les 17 ODD"
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="pages/Projet-2-HackatonReboot2022.html">Explication</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="https://www.rebootcommunication.org"target="_blank">Voir le site du Hackaton</a></li>
+                      <li><a class="dropdown-item" href="https://www.instagram.com/les17odd/"target="_blank">Voir le compte Instagram</a></li>
+                    </ul>
+                  </li>
               </ul>
             </div>
           </div>
