--- a/pages/Projet-2-HackatonReboot2022.html
+++ b/pages/Projet-2-HackatonReboot2022.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/Logo.jpg" type="image/x-icon">
-    <title>Court métrage "comédie de noël"</title>
+    <title>Hackaton Reboot 2022 "Les 17 ODD"</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -29,7 +29,7 @@
                     Court métrage "Comédie Romantique de Noel"
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Explication</a></li>
+                    <li><a class="dropdown-item" href="Projet-1-courtmetrage.html">Explication</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
@@ -56,7 +56,7 @@
       </nav>
     <h1>Salut toi.</h1>
 <div >
-    <h1 class="text-center">Projet de cours : Court métrage "comédie romantique de noël"</h1>
+    <h1 class="text-center">Hackaton Reboot 2022 "Les 17 ODD"</h1>
 <br>
 <br>
 
